Bug 749920 - Unprefix MozMutationObserver and add a warning about use of mutation events, r=sicking